--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,6 @@
-html { 
-  background: url(bg.jpg) no-repeat center center fixed; 
+html {
+  height:100%;
+  background: url(bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
